CRM-20600 - Purify HTML - ang/crmMailingAB/EditCtrl/edit.html

--- a/ang/crmMailingAB/EditCtrl/edit.html
+++ b/ang/crmMailingAB/EditCtrl/edit.html
@@ -174,4 +174,5 @@
         <button crm-icon="fa-floppy-o" ng-disabled="block.check()" ng-click="save().then(leave) ">{{ts('Save Draft')}}</button>
       </span>
     </div>
+  </div>
 </div>
